--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -127,6 +127,30 @@ tasks:
     cmds:
       - goreleaser release --snapshot --clean
 
+  release-tag:
+    desc: "Create and push a release tag (usage: task release-tag TAG=v1.0.0)"
+    requires:
+      vars: [TAG]
+    preconditions:
+      - sh: echo "{{.TAG}}" | grep -qE '^v[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9.]+)?$'
+        msg: "TAG must be a valid semver (e.g., v1.0.0 or v1.0.0-rc.1)"
+      - sh: '[ -z "$(git status --porcelain)" ]'
+        msg: "Working directory is not clean. Commit or stash changes first."
+      - sh: '[ "$(git branch --show-current)" = "main" ]'
+        msg: "Must be on main branch to create a release"
+      - sh: git fetch origin main --tags
+        msg: "Failed to fetch from origin"
+      - sh: '[ "$(git rev-parse HEAD)" = "$(git rev-parse origin/main)" ]'
+        msg: "Local main is not up to date with origin/main. Run 'git pull' first."
+      - sh: '! git rev-parse "{{.TAG}}" >/dev/null 2>&1'
+        msg: "Tag {{.TAG}} already exists"
+    cmds:
+      - echo "Creating release {{.TAG}} at commit $(git rev-parse --short HEAD)..."
+      - git tag -a "{{.TAG}}" -m "Release {{.TAG}}"
+      - git push origin "{{.TAG}}"
+      - echo "Tag {{.TAG}} pushed. GitHub Actions release workflow triggered."
+      - echo "Monitor at https://github.com/kanzifucius/kindplane/actions"
+
   tools:
     desc: Install development tools
     cmds:
