docs: add documentation badge to README and update deployment workflow
- Added a GitHub Pages documentation badge to the README for easy access to project documentation.
- Updated the documentation deployment workflow to set the default version during deployment.

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -79,6 +79,7 @@ jobs:
         if: github.ref == 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/')
         run: |
           mike deploy --push dev
+          mike set-default --push dev
 
       # Manual deployment
       - name: Deploy docs (manual)
