chore: enhance documentation and update CLI reference generation
- Updated .gitignore to exclude generated documentation and cache files.
- Added a new dependency for generating CLI documentation in go.mod and go.sum.
- Enhanced mkdocs.yml with additional features and improved navigation.
- Introduced a new command in Taskfile.yaml to generate CLI reference documentation.
- Updated GitHub Actions workflow to include CLI documentation generation.
- Added logo and 404 page to documentation for better user experience.
- Created a new command to generate CLI documentation from Cobra commands, ensuring accurate and up-to-date references.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -159,6 +159,13 @@ tasks:
       - go install github.com/goreleaser/goreleaser@latest
 
   # Documentation tasks
+  docs:generate:
+    desc: Generate CLI reference documentation from Cobra commands
+    deps: [build]
+    cmds:
+      - go run ./cmd/gendocs
+      - echo "CLI documentation generated in docs/cli-reference/"
+
   docs:serve:
     desc: Serve documentation locally with hot reload (Docker)
     cmds:
