--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -8,6 +8,8 @@ on:
       - 'docs/**'
       - 'mkdocs.yml'
       - '.github/workflows/docs.yaml'
+      - 'internal/cmd/**'
+      - 'cmd/**'
     tags:
       - 'v*'
   workflow_dispatch:
@@ -40,6 +42,15 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23'
+          cache: true
+
+      - name: Generate CLI documentation
+        run: go run ./cmd/gendocs
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -52,6 +63,11 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('docs/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
+
+      - name: Install Cairo dependencies (for social cards)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcairo2-dev libfreetype6-dev libffi-dev libjpeg-dev libpng-dev libz-dev
 
       - name: Install dependencies
         run: pip install -r docs/requirements.txt
