--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,6 +5,10 @@ mkdocs-material>=9.5.0
 # Plugins
 mkdocs-minify-plugin>=0.8.0
 
+# Social cards dependencies
+pillow>=10.0.0
+cairosvg>=2.7.0
+
 # Versioning
 mike>=2.1.0
 
