--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -91,11 +91,11 @@ jobs:
           mike set-default --push latest
 
       # Deploy dev docs on main branch push
+      # Note: We don't set dev as default - only stable releases (tags) should be default
       - name: Deploy dev docs (main branch)
         if: github.ref == 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/')
         run: |
           mike deploy --push dev
-          mike set-default --push dev
 
       # Manual deployment
       - name: Deploy docs (manual)
