feat: add local registry and trusted CA configuration support
- Introduced local container registry configuration in the schema and example YAML, allowing users to enable a local Docker registry for Kind nodes.
- Added support for trusted CA certificates for private registries and workloads, enhancing security for users with custom CA requirements.
- Updated the configuration validation to ensure proper setup of registry and CA settings.
- Enhanced documentation to include new configuration options and usage examples for local registry and trusted CAs.

--- a/kindplane.yaml.example
+++ b/kindplane.yaml.example
@@ -35,6 +35,14 @@ cluster:
   ingress:
     enabled: true
   
+  # Local container registry configuration (optional)
+  # When enabled, creates a local Docker registry that Kind nodes can pull from
+  # registry:
+  #   enabled: true      # Create a local registry container
+  #   port: 5001         # Host port for the registry (default: 5001)
+  #   persistent: false  # Keep registry after kindplane down (default: false)
+  #   name: kind-registry # Registry container name (default: kind-registry)
+  
   # Optional: path to a raw Kind config file
   # Settings from kindplane.yaml will be merged on top (kindplane wins)
   # rawConfigPath: ""
