--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -14,12 +14,20 @@ on:
       - 'v*'
   workflow_dispatch:
     inputs:
+      action:
+        description: 'Action to perform'
+        required: true
+        default: 'deploy'
+        type: choice
+        options:
+          - deploy
+          - delete
       version:
-        description: 'Version to deploy (e.g., 1.0.0, latest, dev)'
-        required: false
+        description: 'Version to deploy or delete (e.g., 1.0.0, latest, dev)'
+        required: true
         default: 'dev'
       set_default:
-        description: 'Set this version as default'
+        description: 'Set this version as default (deploy only)'
         required: false
         default: false
         type: boolean
@@ -100,7 +108,7 @@ jobs:
 
       # Manual deployment
       - name: Deploy docs (manual)
-        if: github.event_name == 'workflow_dispatch'
+        if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'deploy'
         run: |
           VERSION="${{ github.event.inputs.version }}"
           SET_DEFAULT="${{ github.event.inputs.set_default }}"
@@ -112,3 +120,12 @@ jobs:
           else
             mike deploy --push $VERSION
           fi
+
+      # Manual deletion
+      - name: Delete docs version (manual)
+        if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'delete'
+        run: |
+          VERSION="${{ github.event.inputs.version }}"
+          echo "Deleting version: $VERSION"
+          mike delete --push $VERSION
+          echo "Documentation version $VERSION deleted."
