--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,15 +1,37 @@
 name: CI
 
 on:
-  push:
-    branches: [main]
   pull_request:
     branches: [main]
 
 jobs:
+  changes:
+    name: Detect Changes
+    runs-on: ubuntu-latest
+    outputs:
+      code: ${{ steps.filter.outputs.code }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Check for code changes
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            code:
+              - '**/*.go'
+              - 'go.mod'
+              - 'go.sum'
+              - '.github/workflows/ci.yaml'
+              - 'Makefile'
+              - 'Taskfile.yaml'
+
   test:
     name: Test
     runs-on: ubuntu-latest
+    needs: [changes]
+    if: needs.changes.outputs.code == 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,7 +57,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [changes, test]
+    if: needs.changes.outputs.code == 'true'
     strategy:
       matrix:
         include:
@@ -75,3 +98,43 @@ jobs:
         with:
           name: kindplane-${{ matrix.goos }}-${{ matrix.goarch }}
           path: kindplane-*
+
+  # This job always runs and reports CI status
+  # Use this as your required check in branch protection
+  ci-status:
+    name: CI Status
+    runs-on: ubuntu-latest
+    needs: [changes, test, build]
+    if: always()
+    steps:
+      - name: Check CI status
+        run: |
+          echo "Changes result: ${{ needs.changes.result }}"
+          echo "Changes detected: ${{ needs.changes.outputs.code }}"
+          echo "Test result: ${{ needs.test.result }}"
+          echo "Build result: ${{ needs.build.result }}"
+
+          # First, verify the change detection job succeeded
+          if [[ "${{ needs.changes.result }}" != "success" ]]; then
+            echo "::error::Change detection job failed with result: ${{ needs.changes.result }}"
+            exit 1
+          fi
+
+          # If no code changes, CI passes (jobs were skipped)
+          if [[ "${{ needs.changes.outputs.code }}" != "true" ]]; then
+            echo "No code changes detected - CI skipped"
+            exit 0
+          fi
+
+          # If code changed, check that test and build passed
+          if [[ "${{ needs.test.result }}" == "failure" || "${{ needs.test.result }}" == "cancelled" ]]; then
+            echo "Test job failed"
+            exit 1
+          fi
+
+          if [[ "${{ needs.build.result }}" == "failure" || "${{ needs.build.result }}" == "cancelled" ]]; then
+            echo "Build job failed"
+            exit 1
+          fi
+
+          echo "CI passed"
