--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,25 @@ site/
 
 # Auto-generated CLI documentation
 docs/cli-reference/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dev-debug.log
+# Dependency directories
+node_modules/
+# Environment variables
+.env
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# Cursor AI temporary files
+.cursor/plans/
