--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,13 +4,133 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
+    inputs:
+      version_type:
+        description: 'Version bump type'
+        required: true
+        default: 'patch'
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
+      prerelease:
+        description: 'Pre-release type (leave empty for stable)'
+        required: false
+        type: choice
+        options:
+          - ''
+          - alpha
+          - beta
+          - rc
+      dry_run:
+        description: 'Dry run (show version without releasing)'
+        required: false
+        default: false
+        type: boolean
 
 permissions:
   contents: write
 
 jobs:
-  release:
-    name: Release
+  calculate-version:
+    name: Calculate Version
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.version.outputs.VERSION }}
+      is_prerelease: ${{ steps.version.outputs.IS_PRERELEASE }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Calculate next version
+        id: version
+        run: |
+          # If triggered by tag push, use the tag
+          if [ "${{ github.event_name }}" = "push" ]; then
+            VERSION="${GITHUB_REF#refs/tags/}"
+            echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
+            if [[ "$VERSION" == *-* ]]; then
+              echo "IS_PRERELEASE=true" >> $GITHUB_OUTPUT
+            else
+              echo "IS_PRERELEASE=false" >> $GITHUB_OUTPUT
+            fi
+            echo "Using pushed tag: $VERSION"
+            exit 0
+          fi
+
+          # For workflow_dispatch, calculate the next version
+          VERSION_TYPE="${{ inputs.version_type }}"
+          PRERELEASE="${{ inputs.prerelease }}"
+
+          # Get the latest tag
+          LATEST_TAG=$(git tag -l 'v*' --sort=-v:refname | head -1)
+          if [ -z "$LATEST_TAG" ]; then
+            LATEST_TAG="v0.0.0"
+          fi
+          echo "Latest tag: $LATEST_TAG"
+
+          # Parse version components (handle pre-release suffix)
+          BASE_VERSION=$(echo "$LATEST_TAG" | sed 's/-.*//')
+          MAJOR=$(echo "$BASE_VERSION" | sed 's/v\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\)/\1/')
+          MINOR=$(echo "$BASE_VERSION" | sed 's/v\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\)/\2/')
+          PATCH=$(echo "$BASE_VERSION" | sed 's/v\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\)/\3/')
+
+          echo "Parsed: MAJOR=$MAJOR, MINOR=$MINOR, PATCH=$PATCH"
+
+          # Calculate next version based on type
+          case "$VERSION_TYPE" in
+            major)
+              NEXT_MAJOR=$((MAJOR + 1))
+              NEXT_VERSION="v${NEXT_MAJOR}.0.0"
+              ;;
+            minor)
+              NEXT_MINOR=$((MINOR + 1))
+              NEXT_VERSION="v${MAJOR}.${NEXT_MINOR}.0"
+              ;;
+            patch)
+              NEXT_PATCH=$((PATCH + 1))
+              NEXT_VERSION="v${MAJOR}.${MINOR}.${NEXT_PATCH}"
+              ;;
+          esac
+
+          # Handle pre-release suffix
+          IS_PRERELEASE="false"
+          if [ -n "$PRERELEASE" ]; then
+            IS_PRERELEASE="true"
+            # Check if there's an existing pre-release of the same type for this version
+            EXISTING_PRERELEASE=$(git tag -l "${NEXT_VERSION}-${PRERELEASE}.*" --sort=-v:refname | head -1)
+            if [ -n "$EXISTING_PRERELEASE" ]; then
+              # Increment pre-release number
+              PRERELEASE_NUM=$(echo "$EXISTING_PRERELEASE" | sed "s/.*-${PRERELEASE}\.\([0-9]*\)/\1/")
+              NEXT_PRERELEASE_NUM=$((PRERELEASE_NUM + 1))
+              NEXT_VERSION="${NEXT_VERSION}-${PRERELEASE}.${NEXT_PRERELEASE_NUM}"
+            else
+              NEXT_VERSION="${NEXT_VERSION}-${PRERELEASE}.1"
+            fi
+          fi
+
+          echo "Next version: $NEXT_VERSION"
+          echo "VERSION=${NEXT_VERSION}" >> $GITHUB_OUTPUT
+          echo "IS_PRERELEASE=${IS_PRERELEASE}" >> $GITHUB_OUTPUT
+
+      - name: Dry run output
+        if: ${{ inputs.dry_run == true }}
+        run: |
+          echo "::notice::Dry run - would create version: ${{ steps.version.outputs.VERSION }}"
+          echo "## Dry Run Results" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Would create version: **${{ steps.version.outputs.VERSION }}**" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Pre-release: ${{ steps.version.outputs.IS_PRERELEASE }}" >> $GITHUB_STEP_SUMMARY
+
+  create-tag:
+    name: Create Tag
+    needs: calculate-version
+    if: ${{ github.event_name == 'workflow_dispatch' && inputs.dry_run != true }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,19 +138,36 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Create and push tag
+        run: |
+          VERSION="${{ needs.calculate-version.outputs.version }}"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag -a "$VERSION" -m "Release $VERSION"
+          git push origin "$VERSION"
+          echo "Created and pushed tag: $VERSION"
+
+  release:
+    name: Release
+    needs: [calculate-version, create-tag]
+    if: ${{ always() && needs.calculate-version.result == 'success' && (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && inputs.dry_run != true)) }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ needs.calculate-version.outputs.version }}
+
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.25'
           cache: true
 
-      - name: Get version
-        id: version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-
       - name: Build binaries
         run: |
-          VERSION=${{ steps.version.outputs.VERSION }}
+          VERSION=${{ needs.calculate-version.outputs.version }}
           COMMIT=${{ github.sha }}
           BUILD_TIME=$(date -u +%Y-%m-%dT%H:%M:%SZ)
           LDFLAGS="-s -w -X github.com/kanzi/kindplane/internal/cmd.version=${VERSION} -X github.com/kanzi/kindplane/internal/cmd.commit=${COMMIT} -X github.com/kanzi/kindplane/internal/cmd.buildTime=${BUILD_TIME}"
@@ -59,7 +196,7 @@ jobs:
       - name: Create tarballs
         run: |
           cd dist
-          VERSION=${{ steps.version.outputs.VERSION }}
+          VERSION=${{ needs.calculate-version.outputs.version }}
           
           # Create tarballs for Unix systems
           for f in kindplane-linux-* kindplane-darwin-*; do
@@ -72,25 +209,79 @@ jobs:
           # Update checksums with archives
           sha256sum *.tar.gz *.zip >> checksums.txt
 
-      - name: Generate changelog
-        id: changelog
+      - name: Generate release notes
+        id: release_notes
         run: |
-          # Get commits since last tag
+          VERSION=${{ needs.calculate-version.outputs.version }}
+          
+          # Get previous tag
           PREV_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+          
+          # Generate changelog from commits
           if [ -n "$PREV_TAG" ]; then
-            CHANGELOG=$(git log --pretty=format:"- %s (%h)" ${PREV_TAG}..HEAD)
+            echo "Generating changelog from $PREV_TAG to $VERSION"
+            
+            # Categorise commits by conventional commit type
+            FEATURES=$(git log --pretty=format:"- %s (%h)" ${PREV_TAG}..HEAD --grep="^feat" 2>/dev/null || true)
+            FIXES=$(git log --pretty=format:"- %s (%h)" ${PREV_TAG}..HEAD --grep="^fix" 2>/dev/null || true)
+            DOCS=$(git log --pretty=format:"- %s (%h)" ${PREV_TAG}..HEAD --grep="^docs" 2>/dev/null || true)
+            OTHER=$(git log --pretty=format:"- %s (%h)" ${PREV_TAG}..HEAD --grep="^chore\|^refactor\|^test\|^ci\|^build" 2>/dev/null || true)
+            
+            # If no conventional commits found, get all commits
+            if [ -z "$FEATURES" ] && [ -z "$FIXES" ] && [ -z "$DOCS" ] && [ -z "$OTHER" ]; then
+              ALL_COMMITS=$(git log --pretty=format:"- %s (%h)" ${PREV_TAG}..HEAD)
+            fi
           else
-            CHANGELOG=$(git log --pretty=format:"- %s (%h)" HEAD)
+            ALL_COMMITS=$(git log --pretty=format:"- %s (%h)" HEAD~10..HEAD 2>/dev/null || git log --pretty=format:"- %s (%h)" HEAD)
           fi
           
-          # Write to file for multiline support
-          echo "$CHANGELOG" > changelog.txt
-          
+          # Build release notes
+          {
+            echo "RELEASE_NOTES<<EOF"
+            
+            if [ -n "$FEATURES" ]; then
+              echo "### Features"
+              echo "$FEATURES"
+              echo ""
+            fi
+            
+            if [ -n "$FIXES" ]; then
+              echo "### Bug Fixes"
+              echo "$FIXES"
+              echo ""
+            fi
+            
+            if [ -n "$DOCS" ]; then
+              echo "### Documentation"
+              echo "$DOCS"
+              echo ""
+            fi
+            
+            if [ -n "$OTHER" ]; then
+              echo "### Other Changes"
+              echo "$OTHER"
+              echo ""
+            fi
+            
+            if [ -n "$ALL_COMMITS" ]; then
+              echo "### Changes"
+              echo "$ALL_COMMITS"
+              echo ""
+            fi
+            
+            if [ -n "$PREV_TAG" ]; then
+              echo "**Full Changelog**: https://github.com/${{ github.repository }}/compare/${PREV_TAG}...${VERSION}"
+            fi
+            
+            echo "EOF"
+          } >> $GITHUB_OUTPUT
+
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ needs.calculate-version.outputs.version }}
           draft: false
-          prerelease: ${{ contains(steps.version.outputs.VERSION, '-') }}
+          prerelease: ${{ needs.calculate-version.outputs.is_prerelease == 'true' }}
           generate_release_notes: true
           files: |
             dist/*.tar.gz
@@ -115,6 +306,6 @@ jobs:
             
             ## What's Changed
             
-            See the auto-generated release notes below.
+            ${{ steps.release_notes.outputs.RELEASE_NOTES }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
