--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -20,6 +20,10 @@ tasks:
     cmds:
       - task --list
 
+  # =============================================================================
+  # Build tasks
+  # =============================================================================
+
   build:
     desc: Build the binary
     cmds:
@@ -27,7 +31,7 @@ tasks:
 
   build:all:
     desc: Build for all platforms
-    deps: [clean]
+    deps: [build:clean]
     cmds:
       - GOOS=darwin GOARCH=amd64 go build -ldflags "{{.LDFLAGS}}" -o bin/{{.BINARY_NAME}}-darwin-amd64 ./cmd/kindplane
       - GOOS=darwin GOARCH=arm64 go build -ldflags "{{.LDFLAGS}}" -o bin/{{.BINARY_NAME}}-darwin-arm64 ./cmd/kindplane
@@ -35,55 +39,26 @@ tasks:
       - GOOS=linux GOARCH=arm64 go build -ldflags "{{.LDFLAGS}}" -o bin/{{.BINARY_NAME}}-linux-arm64 ./cmd/kindplane
       - GOOS=windows GOARCH=amd64 go build -ldflags "{{.LDFLAGS}}" -o bin/{{.BINARY_NAME}}-windows-amd64.exe ./cmd/kindplane
 
-  install:
+  build:install:
     desc: Install locally to $GOPATH/bin
     cmds:
       - go install -ldflags "{{.LDFLAGS}}" ./cmd/kindplane
 
-  test:
-    desc: Run tests
+  build:clean:
+    desc: Clean build artifacts
     cmds:
-      - go test -v -race ./...
+      - rm -rf bin/
+      - rm -f coverage.out coverage.html
 
-  test:coverage:
-    desc: Run tests with coverage
-    cmds:
-      - go test -v -race -coverprofile=coverage.out ./...
-      - go tool cover -html=coverage.out -o coverage.html
-      - echo "Coverage report generated at coverage.html"
-
-  test:short:
-    desc: Run short tests only
-    cmds:
-      - go test -v -short ./...
-
-  lint:
-    desc: Run linter
-    cmds:
-      - golangci-lint run ./...
-
-  lint:fix:
-    desc: Run linter and fix issues
-    cmds:
-      - golangci-lint run --fix ./...
-
-  fmt:
-    desc: Format code
-    cmds:
-      - go fmt ./...
-      - command -v goimports >/dev/null && goimports -w . || echo "goimports not installed, skipping"
-
-  tidy:
+  build:tidy:
     desc: Tidy and verify dependencies
     cmds:
       - go mod tidy
       - go mod verify
 
-  clean:
-    desc: Clean build artifacts
-    cmds:
-      - rm -rf bin/
-      - rm -f coverage.out coverage.html
+  # =============================================================================
+  # Development tasks
+  # =============================================================================
 
   dev:
     desc: Build and show help
@@ -127,6 +102,51 @@ tasks:
     cmds:
       - ./{{.BINARY_NAME}} {{.CLI_ARGS}}
 
+  # =============================================================================
+  # Test tasks
+  # =============================================================================
+
+  test:
+    desc: Run tests
+    cmds:
+      - go test -v -race ./...
+
+  test:coverage:
+    desc: Run tests with coverage
+    cmds:
+      - go test -v -race -coverprofile=coverage.out ./...
+      - go tool cover -html=coverage.out -o coverage.html
+      - echo "Coverage report generated at coverage.html"
+
+  test:short:
+    desc: Run short tests only
+    cmds:
+      - go test -v -short ./...
+
+  # =============================================================================
+  # Lint and format tasks
+  # =============================================================================
+
+  lint:
+    desc: Run linter
+    cmds:
+      - golangci-lint run ./...
+
+  lint:fix:
+    desc: Run linter and fix issues
+    cmds:
+      - golangci-lint run --fix ./...
+
+  fmt:
+    desc: Format code
+    cmds:
+      - go fmt ./...
+      - command -v goimports >/dev/null && goimports -w . || echo "goimports not installed, skipping"
+
+  # =============================================================================
+  # Quality assurance (top-level utility)
+  # =============================================================================
+
   check:
     desc: Run all checks (fmt, lint, test)
     cmds:
@@ -134,18 +154,69 @@ tasks:
       - task: lint
       - task: test
 
-  release:snapshot:
-    desc: Create a snapshot release (requires goreleaser)
-    cmds:
-      - goreleaser release --snapshot --clean
+  # =============================================================================
+  # Release tasks
+  # =============================================================================
 
-  release:tags:
-    desc: List all release tags
+  release:next:
+    desc: "Show next version (usage: task release:next TYPE=patch|minor|major PRERELEASE=alpha|beta|rc)"
+    vars:
+      TYPE: '{{.TYPE | default "patch"}}'
+      PRERELEASE: '{{.PRERELEASE | default ""}}'
     cmds:
-      - git tag -l --sort=-v:refname 'v*'
+      - |
+        # Get the latest tag
+        LATEST_TAG=$(git tag -l 'v*' --sort=-v:refname | head -1)
+        if [ -z "$LATEST_TAG" ]; then
+          LATEST_TAG="v0.0.0"
+        fi
 
-  release-tag:
-    desc: "Create and push a release tag (usage: task release-tag TAG=v1.0.0)"
+        # Parse version components (handle pre-release suffix)
+        BASE_VERSION=$(echo "$LATEST_TAG" | sed 's/-.*//')
+        MAJOR=$(echo "$BASE_VERSION" | sed 's/v\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\)/\1/')
+        MINOR=$(echo "$BASE_VERSION" | sed 's/v\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\)/\2/')
+        PATCH=$(echo "$BASE_VERSION" | sed 's/v\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\)/\3/')
+
+        # Calculate next versions
+        NEXT_PATCH="v${MAJOR}.${MINOR}.$((PATCH+1))"
+        NEXT_MINOR="v${MAJOR}.$((MINOR+1)).0"
+        NEXT_MAJOR="v$((MAJOR+1)).0.0"
+
+        # Determine the selected next version
+        case "{{.TYPE}}" in
+          major) NEXT_VERSION="$NEXT_MAJOR" ;;
+          minor) NEXT_VERSION="$NEXT_MINOR" ;;
+          patch) NEXT_VERSION="$NEXT_PATCH" ;;
+          *) NEXT_VERSION="$NEXT_PATCH" ;;
+        esac
+
+        # Handle pre-release suffix
+        PRERELEASE="{{.PRERELEASE}}"
+        if [ -n "$PRERELEASE" ]; then
+          EXISTING=$(git tag -l "${NEXT_VERSION}-${PRERELEASE}.*" --sort=-v:refname | head -1)
+          if [ -n "$EXISTING" ]; then
+            NUM=$(echo "$EXISTING" | sed "s/.*-${PRERELEASE}\.\([0-9]*\)/\1/")
+            NEXT_VERSION="${NEXT_VERSION}-${PRERELEASE}.$((NUM+1))"
+          else
+            NEXT_VERSION="${NEXT_VERSION}-${PRERELEASE}.1"
+          fi
+        fi
+
+        echo ""
+        echo "Current version: $LATEST_TAG"
+        echo ""
+        echo "Next versions:"
+        echo "  patch:  $NEXT_PATCH"
+        echo "  minor:  $NEXT_MINOR"
+        echo "  major:  $NEXT_MAJOR"
+        echo ""
+        echo "Selected ({{.TYPE}}): $NEXT_VERSION"
+        echo ""
+        echo "To create this release:"
+        echo "  task release:tag TAG=$NEXT_VERSION"
+
+  release:tag:
+    desc: "Create and push a release tag (usage: task release:tag TAG=v1.0.0)"
     requires:
       vars: [TAG]
     preconditions:
@@ -189,14 +260,31 @@ tasks:
       - git tag -d "{{.TAG}}" || echo "Local tag {{.TAG}} not found"
       - echo "Release {{.TAG}} deleted successfully."
 
-  tools:
+  release:snapshot:
+    desc: Create a snapshot release (requires goreleaser)
+    cmds:
+      - goreleaser release --snapshot --clean
+
+  release:tags:
+    desc: List all release tags
+    cmds:
+      - git tag -l --sort=-v:refname 'v*'
+
+  # =============================================================================
+  # Tools tasks
+  # =============================================================================
+
+  tools:install:
     desc: Install development tools
     cmds:
       - go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
       - go install golang.org/x/tools/cmd/goimports@latest
       - go install github.com/goreleaser/goreleaser@latest
 
+  # =============================================================================
   # Documentation tasks
+  # =============================================================================
+
   docs:generate:
     desc: Generate CLI reference documentation from Cobra commands
     deps: [build]
@@ -219,7 +307,6 @@ tasks:
     cmds:
       - rm -rf site/
 
-  # Versioned documentation tasks (using mike)
   docs:version:deploy:
     desc: "Deploy a versioned doc (usage: task docs:version:deploy VERSION=1.0.0)"
     requires:
@@ -257,7 +344,10 @@ tasks:
           sh -c "pip install mike && mike delete {{.VERSION}} --push"
       - echo "Documentation version {{.VERSION}} deleted."
 
+  # =============================================================================
   # VHS screen recording tasks
+  # =============================================================================
+
   vhs:all:
     desc: Generate all VHS recordings in correct dependency order
     deps: [build]
@@ -294,5 +384,3 @@ tasks:
     desc: Remove generated VHS recordings
     cmds:
       - rm -rf docs/assets/vhs/*.gif
-
-  
