feat: update review settings and enhance CI workflow for tag detection
- Adjust review profile to provide lighter feedback and disable high-level summaries.
- Refine tone instructions to focus on actionable feedback and skip minor nitpicks.
- Modify CI workflow to include a step for detecting tags during workflow_run events, ensuring accurate deployment conditions for versioned documentation.

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -4,8 +4,9 @@
 language: en-GB
 
 reviews:
+  profile: chill # Lighter feedback; avoids minor/nitpicky comments
   request_changes_workflow: false
-  high_level_summary: true
+  high_level_summary: false
   poem: false
   review_status: true
   collapse_walkthrough: false
@@ -19,7 +20,7 @@ chat:
   auto_reply: true
 
 tone_instructions: |
-  Be concise and direct. Focus on actionable feedback.
-  Use British English spelling.
+  Be concise and direct. Focus on actionable, substantive feedback only.
+  Skip minor or stylistic nitpicks. Use British English spelling.
 
 early_access: false
