--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -56,8 +56,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # For workflow_run events, checkout the tag that triggered the release
-          ref: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_branch || github.ref }}
+          ref: ${{ github.ref }}
+
+      - name: detect_tag
+        id: detect_tag
+        if: github.event_name == 'workflow_run'
+        run: |
+          if git rev-parse -q --verify "refs/tags/${{ github.event.workflow_run.head_branch }}" > /dev/null 2>&1; then
+            echo "is_tag=true" >> $GITHUB_OUTPUT
+          else
+            echo "is_tag=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Setup Go
         uses: actions/setup-go@v5
@@ -100,7 +109,7 @@ jobs:
 
       # Deploy versioned docs after successful release
       - name: Deploy versioned docs (after release)
-        if: github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' && startsWith(github.event.workflow_run.head_branch, 'v')
+        if: github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' && startsWith(github.event.workflow_run.head_branch, 'v') && steps.detect_tag.outputs.is_tag == 'true'
         run: |
           VERSION="${{ github.event.workflow_run.head_branch }}"
           VERSION=${VERSION#v}
