Refactor/ui-and-bootstrap (#14)
* feat: add PhaseTracker UI component and refactor bootstrap progress

- Add PhaseTracker for multi-phase operation tracking with visual feedback
- Refactor 'up' command to use PhaseTracker for structured bootstrap progress
- Migrate chart, provider, and credentials commands to centralized ui package
- Refactor ui package into focused modules (spinner, progress, table, etc.)
- Add Kind node image configuration with version-based resolution
- Add TUI feedback for trusted CA certificate configuration
- Add OpenCode skills for TUI components and CLI commands

* feat: add TUI dashboard for bootstrap command

- Add DashboardModel with Bubble Tea for interactive bootstrap display
- Phase table with status, timing, and completion messages
- Timeout countdown with extend prompt (press 'e' to extend)
- Verbose mode toggle (press 'v') to show log buffer
- Auto-detect TTY: dashboard in TTY, print-based in CI/non-TTY
- Add MarkPhase* state-only methods to PhaseTracker for dashboard
- Add DashboardLogger to kind package for progress updates
- Refactor up.go to support both dashboard and print modes
- Sharp borders and gradient progress per user preference

* fix: align dashboard box borders consistently

- Use lipgloss.Width() for visual width calculation
- Add insertBorderTitle helper for consistent border title insertion
- Fix misaligned borders on operation and log panels

* feat: add show-values flag, Kind config export, workload CA system trust, and UI improvements

- Add --show-values flag to display merged Helm values before installation
- Add Kind cluster config export to dump command (kind-config.yaml)
- Mount workload CAs to system trust store and run update-ca-certificates
- Add pods status panel toggle to TUI dashboard ([p] hotkey)
- Refactor Helm installer with InstallOptions for value transformation hooks
- Extract namespace creation to shared helm.EnsureNamespace helper
- Fix linting issues with unchecked fmt.Fprint return values
- 

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -10,8 +10,11 @@ on:
       - '.github/workflows/docs.yaml'
       - 'internal/cmd/**'
       - 'cmd/**'
-    tags:
-      - 'v*'
+  # Deploy versioned docs only after release workflow succeeds
+  workflow_run:
+    workflows: ["Release"]
+    types:
+      - completed
   workflow_dispatch:
     inputs:
       action:
@@ -44,11 +47,26 @@ concurrency:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    # Skip workflow_run events that didn't succeed or aren't for tags
+    if: |
+      github.event_name != 'workflow_run' || 
+      (github.event.workflow_run.conclusion == 'success' && startsWith(github.event.workflow_run.head_branch, 'v'))
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.ref }}
+
+      - name: detect_tag
+        id: detect_tag
+        if: github.event_name == 'workflow_run'
+        run: |
+          if git rev-parse -q --verify "refs/tags/${{ github.event.workflow_run.head_branch }}" > /dev/null 2>&1; then
+            echo "is_tag=true" >> $GITHUB_OUTPUT
+          else
+            echo "is_tag=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Setup Go
         uses: actions/setup-go@v5
@@ -89,12 +107,13 @@ jobs:
         run: |
           git fetch origin gh-pages --depth=1 || echo "gh-pages branch doesn't exist yet"
 
-      # Deploy versioned docs on tag push
-      - name: Deploy versioned docs (tag)
-        if: startsWith(github.ref, 'refs/tags/v')
+      # Deploy versioned docs after successful release
+      - name: Deploy versioned docs (after release)
+        if: github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' && startsWith(github.event.workflow_run.head_branch, 'v') && steps.detect_tag.outputs.is_tag == 'true'
         run: |
-          VERSION=${GITHUB_REF#refs/tags/v}
-          echo "Deploying version: $VERSION"
+          VERSION="${{ github.event.workflow_run.head_branch }}"
+          VERSION=${VERSION#v}
+          echo "Deploying version: $VERSION (triggered by successful release)"
           mike deploy --push --update-aliases $VERSION latest
           mike set-default --push latest
 
